; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdio_poll.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdio_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_STREAM_POLL_RD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mp_hal_stdio_poll(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 0, i64* %3, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @MP_STREAM_POLL_RD, align 8
  %6 = and i64 %4, %5
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = call i64 (...) @uart_rx_any()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i64, i64* @MP_STREAM_POLL_RD, align 8
  %13 = load i64, i64* %3, align 8
  %14 = or i64 %13, %12
  store i64 %14, i64* %3, align 8
  br label %15

15:                                               ; preds = %11, %8, %1
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}

declare dso_local i64 @uart_rx_any(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
